Created object for each remaining inputs

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,6 +8,10 @@ $primaryFont: 'Montserrat', sans-serif;
   background-color: $darkGrey;
 }
 
+.header {
+  color: white;
+}
+
 .card {
   height: 740px;
   width: 1250px;
