--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,7 @@
 $bottegaGreen: #00CB79;
 $clearBlue: #45B0E5;
 $mainGrey: #CFCFCF;
-$darkGrey: #444444;
+$darkGrey: #3b3b3b;
 $primaryFont: 'Montserrat', sans-serif;
 
 *,
@@ -15,18 +15,19 @@ body {
   height: 100%;
 }
 
-.home {
-  background-color: $darkGrey;
-}
-
-.header {
-  color: white;
-}
-
 .card {
   height: 740px;
   width: 1250px;
-  background-color: $mainGrey;
   box-shadow: 0 4px 30px 0 rgba(0,0,0, .50);
   border-radius: 8px;
+
+  display: grid;
+  grid-template-rows: 1fr 50px;
+
+  &__inputs {
+    background-color: skyblue;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
