--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,6 +15,11 @@ body {
   height: 100%;
 }
 
+.home {
+  display: grid;
+  justify-items: center;
+}
+
 .card {
   height: 740px;
   width: 1250px;
@@ -29,5 +34,11 @@ body {
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    align-items: center;
   }
+}
+
+.input {
+  display: grid;
 }
