--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,6 @@
 $bottegaGreen: #00CB79;
 $clearBlue: #45B0E5;
-$mainGrey: #CFCFCF;
-$darkGrey: #444444;
+$mainGrey: rgb(114, 114, 114);
 $primaryFont: 'Montserrat', sans-serif;
 
 *,
@@ -26,6 +25,9 @@ body {
 .header {
   align-self: center;
   color: white;
+  text-align: center;
+  font-family: Montserrat;
+
   &__skew {
     transform: skewY(-10deg);
     z-index: -10;
@@ -35,8 +37,19 @@ body {
     height: 600px;
     width: 100%;
     margin-top: -150px;
-    background-color: $darkGrey;
+    background-color: $mainGrey;
     border-bottom: 15px solid $bottegaGreen;
+  }
+
+  h1 {
+    margin-bottom: 15px;
+    font-weight: 500;
+    font-size: 36px;
+  }
+
+  p {
+    color: rgba(255,255,255,0.75);
+    width: 460px;
   }
 }
 
