--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -54,16 +54,17 @@ body {
 }
 
 .card {
+  font-family: Montserrat;
   height: 740px;
   width: 1250px;
   box-shadow: 0 4px 30px 0 rgba(0,0,0, .50);
+  background-color: white;
   border-radius: 8px;
 
   display: grid;
   grid-template-rows: 1fr 50px;
 
   &__inputs {
-    background-color: skyblue;
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(4, 1fr);
@@ -75,18 +76,42 @@ body {
 .input {
   display: grid;
   grid-template-columns: [num-s] 26px [num-e input-s] 1fr [input-e];
+  grid-gap: 10px;
+
+  text-align: center;
 
   &__number {
     grid-column: num-s/num-e;
+    align-self: center;
+
+    background-color: $bottegaGreen;
+    color: white;
+    font-size: 20px;
+    padding-top: 3px;
+    width: 30px;
+    max-height: 30px !important;
+    border-radius: 50%;
   }
 
   input {
     grid-column: input-s/input-e;
+
+    text-align: center;
+    font-size: 15px;
+    font-weight: 600;
+    border: none;
+    width: 190px;
+
+    &:focus {
+      outline: none;
+    }
   }
 
   &__title {
     grid-column: input-s/input-e;
-    margin-top: 8px;
-    text-align: center;
+
+    padding-top: 5px;
+    border-top: 1px solid #b3b3b3;
+    font-size: 13px;
   }
 }
