--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -67,7 +67,6 @@ body {
 
 .card {
   font-family: "Montserrat";
-  height: 740px;
   width: 1250px;
   box-shadow: 0 4px 30px 0 rgba(0,0,0,.50);
   background-color: white;
@@ -82,11 +81,15 @@ body {
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     align-items: center;
+
+    height: 645px;
+    margin: 0 30px;
   }
 
   button {
     justify-self: center;
     border: none;
+    transform: translateY(50%);
     &:focus {
       outline: none;
     }
@@ -103,18 +106,33 @@ body {
       background-color: $clearBlue;
     }
   }
+
+  &__content {
+    width: 1100px;
+    height: 300px;
+    background-color: #f2f2f2;
+    justify-self: center;
+    
+    margin-bottom: 80px;
+    
+    p {
+      padding: 30px 45px;
+      font-size: 16px;
+    }
+  }
 }
 
 .input {
   display: grid;
   grid-template-columns: [num-s] 26px [num-e input-s] 1fr [input-e];
-  grid-gap: 8px;
+  grid-column-gap: 8px;
 
   text-align: center;
+  height: 45px;
 
   &__number {
     grid-column: num-s/num-e;
-    align-self: center;
+    justify-self: center;
 
     background-color: $bottegaGreen;
     color: white;
