--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -31,7 +31,7 @@ body {
 
   display: grid;
   justify-items: center;
-  grid-template-rows: [header-s] 210px [header-e card-s] 995px [card-e];
+  grid-template-rows: [header-s] 150px [header-e card-s] 995px [card-e];
 }
 
 .header {
@@ -71,6 +71,8 @@ body {
   box-shadow: 0 4px 30px 0 rgba(0,0,0,.50);
   background-color: white;
   border-radius: 8px;
+  padding: 0px 10px 50px 10px;
+  margin-bottom: 100px;
 
   display: grid;
   grid-template-rows: 1fr 50px;
@@ -109,15 +111,17 @@ body {
 
   &__content {
     width: 1100px;
-    height: 300px;
+    height: 250px;
     background-color: #f2f2f2;
     justify-self: center;
-    
+
     margin-bottom: 80px;
     
     p {
+      line-height: 29px;
       padding: 30px 45px;
       font-size: 16px;
+      font-weight: 300;
     }
   }
 }
